# IF-T_R

./: README.md  database.sqlite  pyproject.toml
app/: config.py  main.py
app/db/models/: database.py
app/domain/dictionary/: controllers.py  dependencies.py  repositories.py  schemas.py  services.py
