[project]
name = "ift-r"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "litestar[sqlalchemy]>=2.18.0",
    "pydantic>=2.12.5",
    "sniffio>=1.3.1",
    "structlog>=25.5.0",
    "uvicorn>=0.38.0",
]
